syntax = "proto3";

package guru.qa.grpc.niffler;

option java_multiple_files = true;
option java_package = "guru.qa.grpc.niffler.grpc";
option java_outer_classname = "NifflerCategoryProto";

service NifflerCategoryService {
    rpc GetCategories (UserName) returns (Categories) {};
    rpc AddCategory (CategoryRequest) returns (Category) {};
}

message UserName {
    string name = 1;
}

message Categories {
    repeated Category categories = 1;
}

message Category {
    string id = 1;
    string category = 2;
    string username = 3;
}

message CategoryRequest {
    string category = 1;
    string username = 2;
}